--- a/lib/addons/dragAndDrop/styles.css
+++ b/lib/addons/dragAndDrop/styles.css
@@ -14,17 +14,13 @@
   -webkit-transition: opacity 150ms;
   transition: opacity 150ms;
 }
-.rbc-addons-dnd .rbc-event:hover .rbc-addons-dnd-resize-ns-icon,
-.rbc-addons-dnd .rbc-event:hover .rbc-addons-dnd-resize-ew-icon {
+.rbc-addons-dnd .rbc-event:hover .rbc-addons-dnd-resize-ns-icon, .rbc-addons-dnd .rbc-event:hover .rbc-addons-dnd-resize-ew-icon {
   display: block;
 }
 .rbc-addons-dnd .rbc-addons-dnd-dragged-event {
   opacity: 0;
 }
-.rbc-addons-dnd.rbc-addons-dnd-is-dragging
-  .rbc-event:not(.rbc-addons-dnd-dragged-event):not(
-    .rbc-addons-dnd-drag-preview
-  ) {
+.rbc-addons-dnd.rbc-addons-dnd-is-dragging .rbc-event:not(.rbc-addons-dnd-dragged-event):not(.rbc-addons-dnd-drag-preview) {
   opacity: 0.5;
 }
 .rbc-addons-dnd .rbc-addons-dnd-resizable {
@@ -43,9 +39,7 @@
 .rbc-addons-dnd .rbc-addons-dnd-resize-ns-anchor:last-child {
   bottom: 0;
 }
-.rbc-addons-dnd
-  .rbc-addons-dnd-resize-ns-anchor
-  .rbc-addons-dnd-resize-ns-icon {
+.rbc-addons-dnd .rbc-addons-dnd-resize-ns-anchor .rbc-addons-dnd-resize-ns-icon {
   display: none;
   border-top: 3px double;
   margin: 0 auto;
@@ -63,9 +57,7 @@
 .rbc-addons-dnd .rbc-addons-dnd-resize-ew-anchor:last-child {
   right: 0;
 }
-.rbc-addons-dnd
-  .rbc-addons-dnd-resize-ew-anchor
-  .rbc-addons-dnd-resize-ew-icon {
+.rbc-addons-dnd .rbc-addons-dnd-resize-ew-anchor .rbc-addons-dnd-resize-ew-icon {
   display: none;
   border-left: 3px double;
   margin-top: auto;
